[project]
name = "dokan"
description = "Automating the NNLOJET workflow"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
dynamic = ["version"]
keywords = []
authors = [
  { name = "NNLOJET" },
]
dependencies = [
  "luigi",
  "numpy",
  "rich",
  "sqlalchemy",
]

[project.urls]
Documentation = "https://github.com/aykhuss/dokan#readme"
Issues = "https://github.com/aykhuss/dokan/issues"
Source = "https://github.com/aykhuss/dokan"

[project.scripts]
nnlojet-run = "dokan:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/dokan/__about__.py"

[tool.ruff]
line-length = 100
